--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ PORT=5000
 # Database Configuration
 # Get this from MongoDB Atlas: https://cloud.mongodb.com/
 # Format: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
-MONGO_URI=your_mongodb_connection_string_here
+MONGODB_URI=your_mongodb_connection_string_here
+# Backward compatibility (optional): if you use this key, server.js will still read it
+MONGO_URI=
 
 # Authentication
 # Generate a secure random string (32+ characters)
